--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 techmap-jobs-cleaned.csv filter=lfs diff=lfs merge=lfs -text
+data/clean/techmap-jobs-cleaned.csv filter=lfs diff=lfs merge=lfs -text
